Changed Fileio to work in IDE and jar.
Uses a fallback found on [this](https://stackoverflow.com/questions/20389255/reading-a-resource-file-from-within-jar) stack overflow question. I don't know how it works, but it does